[gd_scene load_steps=3 format=3 uid="uid://5ve6kvgey6q4"]

[ext_resource type="Script" path="res://Scenes/TitleScene.gd" id="1_k4h2k"]
[ext_resource type="Texture2D" uid="uid://d3hx2auwpkkx0" path="res://Assets/icon.svg" id="2_6h1kw"]

[node name="TitleScene" type="Node2D"]
script = ExtResource("1_k4h2k")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 372.0
offset_top = 41.0
offset_right = 500.0
offset_bottom = 169.0
grow_horizontal = 2
scale = Vector2(3.225, 3.225)
texture = ExtResource("2_6h1kw")

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 374.0
offset_top = 481.0
offset_right = 471.0
offset_bottom = 512.0
scale = Vector2(4.35263, 4.16517)
text = "PLAY GAME"

[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
